<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
        android:id="@+id/nav_save_for_goal"
        android:icon="@drawable/sharp_assignment_turned_in_24"
        android:title="@string/menu_save_for_goal" />
        <item
            android:id="@+id/nav_predict"
            android:icon="@drawable/sharp_functions_24"
            android:title="@string/menu_predict" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/sharp_thumb_up_24"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/sharp_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/sharp_supervisor_account_24"
            android:title="@string/menu_about_us" />

    </group>
</menu>
