<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.svslsavemoneysavelife.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.svslsavemoneysavelife.activities.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_save_for_goal"
        android:name="com.example.svslsavemoneysavelife.activities.ui.save.SaveFragment"
        android:label="@string/menu_save_for_goal"
        tools:layout="@layout/fragment_save" />

    <fragment
        android:id="@+id/nav_predict"
        android:name="com.example.svslsavemoneysavelife.activities.ui.predict.PredictFragment"
        android:label="@string/menu_predict"
        tools:layout="@layout/fragment_predict" />
    <fragment
        android:id="@+id/nav_rate"
        android:name="com.example.svslsavemoneysavelife.activities.ui.rate.RateFragment"
        android:label="@string/menu_rate"
        tools:layout="@layout/fragment_rate" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.svslsavemoneysavelife.activities.ui.about.AboutFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.svslsavemoneysavelife.activities.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>